--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,17 @@ img:hover{
 .horoskop{
   font-size: 2rem;
 }
+#powrót{
+  text-align: center;
+  font-size: 2rem;
+  margin: 70px auto 0 auto;
+  width: 100px;
+}
+.back{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
