--- a/css/style.css
+++ b/css/style.css
@@ -63,17 +63,17 @@ img:hover{
 .hidden{
   display: none;
 }
-.opis{
+.descriptions h2, .error{
   text-align: center;
-  margin: 20px 20% 20px 20%
+  margin: 20px 20% 20px 20%;
+  font-size: 3rem
 }
-.znak{
-  font-size: 2.5rem;
-  margin: 50px 0 40px 0;
+.descriptions p{
+  text-align: center;
+  margin: 20px 15%;
+  font-size: 1.5rem;
 }
-.horoskop{
-  font-size: 2rem;
-}
+
 #powrót{
   text-align: center;
   font-size: 2rem;
